test/assets/app-ingress/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
  namespace: cluster-ingress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test
  template:
    metadata:
      labels:
        app: ingress-test
    spec:
      containers:
      - name: app
        image: openshift/hello-openshift
