test/assets/app-ingress/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: cluster-ingress-test
  labels:
    openshift.io/cluster-ingress-operator-test: ""
