test/assets/app-ingress/route-default.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: default
  namespace: cluster-ingress-test
spec:
  host: app-ingress-test.apps.CLUSTER_NAME.origin-gce.dev.openshift.com
  to:
    kind: Service
    name: app
