test/assets/app-ingress/route-internal.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: internal
  namespace: cluster-ingress-test
  labels:
    environment: internal
spec:
  host: app-ingress-test.apps.CLUSTER_NAME-internal.origin-gce.dev.openshift.com
  to:
    kind: Service
    name: app
