test/assets/app-ingress/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: default
  namespace: cluster-ingress-test
spec:
  host: app.NAMESPACE.apps.CLUSTER_NAME.devcluster.openshift.com
  to:
    kind: Service
    name: app
