test/assets/app-ingress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app
  namespace: cluster-ingress-test
spec:
  selector:
    app: ingress-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
